Running with KumuluzEE Signed-off-by:Jean-Francois James <jefrajames@gmail.com>